# sound

./: .gitignore  sound.cabal
src/: AdditionalCrab.hs  CrabCanon.hs  Examples.hs  Helper.hs  QuaerendoInvenietis.hs  QuerendoInvenietis.hs  quaerendo-invenietis.mid
src/EuterpeaSamples/: CrabCanonE.hs  EHelper.hs  LSystem.hs  MoreMusic.hs  QuaerendoInvenietisE.hs
src/HaskoreSamples/: AdditionalCrab.hs  CrabCanon.hs  Examples.hs  Helper.hs
src/Util/: BasicHelper.hs
src/computermusic/euterpea-samples/: CrabCanonE.hs  EHelper.hs  ExamplesE.hs  LSystem.hs  MoreMusic.hs  Perform.hs  QuaerendoInvenietisE.hs  TryEuterpea.hs  TryPerform.hs
src/computermusic/haskore-samples/: AdditionalCrab.hs  CrabCanon.hs  Examples.hs  Helper.hs  QuaerendoInvenietis.hs
