name:                 sound
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               
maintainer:           
category:             Sound
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable sound
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5,haskore,process,vector,Euterpea,random>1.0
  hs-source-dirs:       src
  default-language:     Haskell2010
